# anagrammatic

./: .gitignore  README.md  anagrammatic.py  gunicorn.conf.py  pyproject.toml  render.yaml
templates/: index.html
