[tool.poetry]
name = "anagrammatic"
version = "0.1.0"
description = "A word game where players find as many words as possible using a given set of letters."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
